syntax="proto3";
package product;
option go_package="./pkg/product/pb";
service ProductService{
    rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse){}
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse){}
    rpc ListCategories(EmptyRequest) returns (ListCategoriesResponse);
    rpc ListProducts(EmptyRequest) returns (ListProductsResponse);
}

//CreateCategory

message CreateCategoryRequest{
    string categoryname=1;
    string description=2;
    string imageurl=3;
}
message CreateCategoryResponse{
    int64 status=1;
    string error=2;
    int64 id=3;
}
//CreateProduct

message CreateProductRequest{
    string categoryname=1;
    string productname=2;
    string description=3;
    string imageurl=4;
    double price=5;
    int64 stock=6;
    bool popular=7;
    string size=8;
}
message CreateProductResponse{
    int64 status=1;
    string error=2;
    int64 id=3;
}

message EmptyRequest {}

message ListCategoriesResponse {
    int32 status = 1; // HTTP status code
    string error = 2; // Error message, if any
    repeated Category categories = 3; // List of categories
}

message Category {
    int64 id = 1;
    string categoryname = 2;
    string description = 3;
    string imageurl=4;
}

message ListProductsResponse {
    int32 status = 1; // HTTP status code
    string error = 2; // Error message, if any
    repeated Product products = 3; // List of products
}

message Product {
    int64 id = 1;
    string categoryname = 2;
    string productname=3;
    string description=4;
    string imageurl = 5;
    double price = 6;
    int64 stock = 7;
    bool popular = 8; 
}